# osprey_ws

./: README.md  frames_2025-05-05_12.57.27.gv  test.py  testosprey.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drone_description/share/drone_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/px4_offboard/share/px4_offboard/: package.sh
install/vl53l8cx_ros/lib/vl53l8cx_ros/: control  depth_point_each  fused_sensors  nav_odom_tf_broadcaster  octomap_builder_node  offboard_control  plotjuggler_visualizer  potential_field_computer  processes  px4_fused_sensors  px4_visualizer  ray_visualizer  sensor_each_pointcloud  vehicle_odom_to_nav_odom  velocity_control  vfh_planner_node  visualizer  (+2 more)
install/vl53l8cx_ros/share/vl53l8cx_ros/: offboard_osprey_control.launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/drone_description/: ekf.yaml
src/drone_description/launch/: transform_launch.py
src/drone_description/meshes/: t265_model.dae
src/drone_description/rviz/: osprey_config.rviz
src/drone_description/urdf/: _t265.urdf.xacro  base1.urdf.xacro  osprey_sensors (copy).xacro  osprey_sensors.urdf  osprey_sensors.xacro
src/vl53l8cx_ros/: setup.py
src/vl53l8cx_ros/msg/: MultiZoneRange.msg
src/vl53l8cx_ros/vl53l8cx_ros/: depth_point_each.py  octomap_builder_node.py  offboard_control.py  offboard_without_VFH.py  plotjuggler_visualizer.py  px4_fused_sensors.py  vfh_planner_node.py  vl53l8cx_pointcloud.py
(+42 files in other folders)
