<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vl53l8cx_ros</name>
  <version>0.0.0</version>
  <description>Package to simulate a VL53L8CX multi-zone ToF sensor</description>
  <maintainer email="susan@todo.todo">susan</maintainer>
  <license>TODO: License declaration</license>

  <!-- For Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Dependencies for message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>px4_msgs</depend>

  <!-- Additional dependencies -->
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

